# dragonsight

./: .gitignore  .style.yapf  MANIFEST.in  README.md  manifest.in  pyproject.toml  requirements.txt
data/classes/: sorcerer.yaml
data/items/: ringOfTheHydromancer.yaml
data/subclasses/: sorcerer-storm.yaml
dragonsight/: __main__.py  ability.py  abilityGrid.py  dbWriter.py  dice.py  expression.py  indexDB.py  player.py  playerDB.py  resource.py  statusGrid.py  ui.py  ui_boilerplate.py
dragonsight/character/: action.py  baseStats.py  charClass.py  feature.py  recharge.py  resource.py  resourceMap.py  resourceStack.py
dragonsight/ui/: abilityGrid.py  boilerplate.py  mainCharStats.py
