
[build-system]
requires = ["setuptools>=58.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonsight"
authors = [{ name = "Alagyn" }]
version = "1.0.0"
description = "A test module for testing"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"

dependencies = ["py-imgui-redux>=1.5.0", "markstore>=1.1.0"]

[project.scripts]
dragonsight = "dragonsight.ui:main"

[tool.setuptools]
packages = ["dragonsight"]

[tool.diamondpack]
mode = "app"
include-tk = false
# stdlib-whitelist = ["json", "subprocess", "glob", "re"]
stdlib-blacklist = ["email", "turtle", "unittest"]
debug-logs = false
